# EWork

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  REPORT.md  pyproject.toml
db/: chunks.pkl  vector_index.faiss
docs/: create_spec_pdf.py
raw/: create_raw_data.py  criando_csv_row_product.py  inventory.parquet  products.csv
schemas/: contracts.py
src/etl/: run.py
src/rag/: api.py  ingest.py
tests/: test_etl.py  test_rag.py
